<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#eee"

              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="@color/ainana_title"
        android:gravity="center_vertical">

        <include layout="@layout/ease_commom_back_btn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/attach_lucky_money"
            android:textColor="#ffffff"
            android:textSize="18sp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="红包个数"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/lucky_money_num"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical|end"
            android:hint="@string/write_number"
            android:inputType="number"
            android:minWidth="60dp"
            android:textColor="@color/black"
            android:textColorHint="@color/ainana_green"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="个"
            android:textColor="@color/black"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/lucky_money_money"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical|end"
            android:hint="@string/write_the_amount"
            android:inputType="number"
            android:minWidth="60dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/ainana_green"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/yuan"
            android:textColor="@color/black"
            android:textSize="18sp"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/white">

        <Button
            android:id="@+id/lucky_money_button"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@color/ainana_title"
            android:text="@string/app_send"/>
    </RelativeLayout>

</LinearLayout>